; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_fourcc.c_LookupCat.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_fourcc.c_LookupCat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i8**, i32)* @LookupCat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @LookupCat(i64 %0, i8** noalias %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  switch i32 %9, label %22 [
    i32 128, label %10
    i32 130, label %14
    i32 129, label %18
  ]

10:                                               ; preds = %3
  %11 = load i64, i64* %5, align 8
  %12 = load i8**, i8*** %6, align 8
  %13 = call i64 @LookupVideo(i64 %11, i8** %12)
  store i64 %13, i64* %4, align 8
  br label %41

14:                                               ; preds = %3
  %15 = load i64, i64* %5, align 8
  %16 = load i8**, i8*** %6, align 8
  %17 = call i64 @LookupAudio(i64 %15, i8** %16)
  store i64 %17, i64* %4, align 8
  br label %41

18:                                               ; preds = %3
  %19 = load i64, i64* %5, align 8
  %20 = load i8**, i8*** %6, align 8
  %21 = call i64 @LookupSpu(i64 %19, i8** %20)
  store i64 %21, i64* %4, align 8
  br label %41

22:                                               ; preds = %3
  %23 = load i64, i64* %5, align 8
  %24 = load i8**, i8*** %6, align 8
  %25 = call i64 @LookupVideo(i64 %23, i8** %24)
  store i64 %25, i64* %8, align 8
  %26 = load i64, i64* %8, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %22
  %29 = load i64, i64* %5, align 8
  %30 = load i8**, i8*** %6, align 8
  %31 = call i64 @LookupAudio(i64 %29, i8** %30)
  store i64 %31, i64* %8, align 8
  br label %32

32:                                               ; preds = %28, %22
  %33 = load i64, i64* %8, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %39, label %35

35:                                               ; preds = %32
  %36 = load i64, i64* %5, align 8
  %37 = load i8**, i8*** %6, align 8
  %38 = call i64 @LookupSpu(i64 %36, i8** %37)
  store i64 %38, i64* %8, align 8
  br label %39

39:                                               ; preds = %35, %32
  %40 = load i64, i64* %8, align 8
  store i64 %40, i64* %4, align 8
  br label %41

41:                                               ; preds = %39, %18, %14, %10
  %42 = load i64, i64* %4, align 8
  ret i64 %42
}

declare dso_local i64 @LookupVideo(i64, i8**) #1

declare dso_local i64 @LookupAudio(i64, i8**) #1

declare dso_local i64 @LookupSpu(i64, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
